backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deltameta-backend
spec:
  selector:
    app: deltameta-backend
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
